deps/zarrs_jl/zarrs_jl.h

/**
 * Opaque handle types — allocated and managed by libzarrs_jl.
 * Callers interact with these only via pointers.
 */
typedef struct StorageHandle StorageHandle;
typedef struct ArrayHandle ArrayHandle;
typedef struct GroupHandle GroupHandle;
enum ZarrsResult {
  ZARRS_SUCCESS = 0,
  ZARRS_ERROR_NULL_PTR = -1,
  ZARRS_ERROR_STORAGE = -2,
  ZARRS_ERROR_ARRAY = -3,
  ZARRS_ERROR_BUFFER_LENGTH = -4,
  ZARRS_ERROR_INVALID_INDICES = -5,
  ZARRS_ERROR_NODE_PATH = -6,
  ZARRS_ERROR_STORE_PREFIX = -7,
  ZARRS_ERROR_INVALID_METADATA = -8,
  ZARRS_ERROR_STORAGE_CAPABILITY = -9,
  ZARRS_ERROR_UNKNOWN_CHUNK_GRID_SHAPE = -10,
  ZARRS_ERROR_UNKNOWN_INTERSECTING_CHUNKS = -11,
  ZARRS_ERROR_UNSUPPORTED_DATA_TYPE = -12,
  ZARRS_ERROR_GROUP = -13,
  ZARRS_ERROR_INCOMPATIBLE_DIMENSIONALITY = -14,
};
typedef int32_t ZarrsResult;
void zarrsFreeString(char *s);
ZarrsResult zarrsArrayRetrieveSubset(ArrayHandle *array,
                                     uintptr_t dimensionality,
                                     const uint64_t *pSubsetStart,
                                     const uint64_t *pSubsetShape,
                                     uintptr_t subsetBytesCount,
                                     uint8_t *pSubsetBytes);
ZarrsResult zarrsArrayStoreSubset(ArrayHandle *array,
                                  uintptr_t dimensionality,
                                  const uint64_t *pSubsetStart,
                                  const uint64_t *pSubsetShape,
                                  uintptr_t subsetBytesCount,
                                  const uint8_t *pSubsetBytes);
ZarrsResult zarrsArrayGetChunkGridShape(ArrayHandle *array,
                                        uintptr_t dimensionality,
                                        uint64_t *pChunkGridShape);
ZarrsResult zarrsArrayGetChunkSize(ArrayHandle *array,
                                   uintptr_t dimensionality,
                                   const uint64_t *pChunkIndices,
                                   uintptr_t *pChunkSize);
ZarrsResult zarrsArrayRetrieveChunk(ArrayHandle *array,
                                    uintptr_t dimensionality,
                                    const uint64_t *pChunkIndices,
                                    uintptr_t chunkBytesCount,
                                    uint8_t *pChunkBytes);
ZarrsResult zarrsArrayStoreChunk(ArrayHandle *array,
                                 uintptr_t dimensionality,
                                 const uint64_t *pChunkIndices,
                                 uintptr_t chunkBytesCount,
                                 const uint8_t *pChunkBytes);
ZarrsResult zarrsArrayGetChunkOrigin(ArrayHandle *array,
                                     uintptr_t dimensionality,
                                     const uint64_t *pChunkIndices,
                                     uint64_t *pChunkOrigin);
ZarrsResult zarrsArrayGetChunkShape(ArrayHandle *array,
                                    uintptr_t dimensionality,
                                    const uint64_t *pChunkIndices,
                                    uint64_t *pChunkShape);
ZarrsResult zarrsArrayGetSubChunkShape(ArrayHandle *array,
                                       uintptr_t dimensionality,
                                       int32_t *pIsSharded,
                                       uint64_t *pSubChunkShape);
ZarrsResult zarrsCreateGroupRW(StorageHandle *storage,
                               const char *path,
                               const char *metadata_json,
                               GroupHandle **pGroup);
ZarrsResult zarrsOpenGroupRW(StorageHandle *storage, const char *path, GroupHandle **pGroup);
ZarrsResult zarrsDestroyGroup(GroupHandle *group);
ZarrsResult zarrsGroupGetAttributes(GroupHandle *group, int32_t pretty, char **pAttributes);
ZarrsResult zarrsGroupSetAttributes(GroupHandle *group, const char *attributes);
ZarrsResult zarrsGroupStoreMetadata(GroupHandle *group);
/**
 * Resize an array.
 */
ZarrsResult zarrsJlArrayResize(StorageHandle *storage,
                               const char *path,
                               uintptr_t ndim,
                               const uint64_t *new_shape);
/**
 * List directory children, returning a JSON array of strings.
 */
ZarrsResult zarrsJlStorageListDir(StorageHandle *storage, const char *path, char **json_out);
/**
 * Read a single key from storage, returning its bytes as a C string.
 * Returns ZARRS_SUCCESS with null output if the key is not found.
 */
ZarrsResult zarrsJlStorageGet(StorageHandle *storage, const char *key, char **data_out);
/**
 * Erase a specific chunk from an array.
 */
ZarrsResult zarrsJlArrayEraseChunk(StorageHandle *storage,
                                   const char *path,
                                   uintptr_t ndim,
                                   const uint64_t *indices);