src/libzarrs_api.jl


### Prototype
```c
ZarrsResult zarrsArrayRetrieveSubset(ArrayHandle *array, uintptr_t dimensionality, const uint64_t *pSubsetStart, const uint64_t *pSubsetShape, uintptr_t subsetBytesCount, uint8_t *pSubsetBytes);
```
"""
function zarrs_array_retrieve_subset(
    array,
    dimensionality,
    pSubsetStart,
    pSubsetShape,
    subsetBytesCount,
    pSubsetBytes,
)
    _result = ccall(
        (:zarrsArrayRetrieveSubset, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}, Ptr{UInt64}, Csize_t, Ptr{UInt8}),
        array,
        dimensionality,
        pSubsetStart,
        pSubsetShape,
        subsetBytesCount,
        pSubsetBytes,
    )
    check_error(_result)
end

"""
    zarrs_array_store_subset(array, dimensionality, pSubsetStart, pSubsetShape, subsetBytesCount, pSubsetBytes)

### Prototype
```c
ZarrsResult zarrsArrayStoreSubset(ArrayHandle *array, uintptr_t dimensionality, const uint64_t *pSubsetStart, const uint64_t *pSubsetShape, uintptr_t subsetBytesCount, const uint8_t *pSubsetBytes);
```
"""
function zarrs_array_store_subset(
    array,
    dimensionality,
    pSubsetStart,
    pSubsetShape,
    subsetBytesCount,
    pSubsetBytes,
)
    _result = ccall(
        (:zarrsArrayStoreSubset, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}, Ptr{UInt64}, Csize_t, Ptr{UInt8}),
        array,
        dimensionality,
        pSubsetStart,
        pSubsetShape,
        subsetBytesCount,
        pSubsetBytes,
    )
    check_error(_result)
end

"""
    zarrs_array_get_chunk_grid_shape(array, dimensionality, pChunkGridShape)

### Prototype
```c
ZarrsResult zarrsArrayGetChunkGridShape(ArrayHandle *array, uintptr_t dimensionality, uint64_t *pChunkGridShape);
```
"""
function zarrs_array_get_chunk_grid_shape(array, dimensionality, pChunkGridShape)
    _result = ccall(
        (:zarrsArrayGetChunkGridShape, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}),
        array,
        dimensionality,
        pChunkGridShape,
    )
    check_error(_result)
end

"""
    zarrs_array_get_chunk_size(array, dimensionality, pChunkIndices)

### Prototype
```c
ZarrsResult zarrsArrayGetChunkSize(ArrayHandle *array, uintptr_t dimensionality, const uint64_t *pChunkIndices, uintptr_t *pChunkSize);
```
"""
function zarrs_array_get_chunk_size(array, dimensionality, pChunkIndices)
    _out_ref = Ref{Csize_t}(zero(Csize_t))
    _result = ccall(
        (:zarrsArrayGetChunkSize, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}, Ptr{Csize_t}),
        array,
        dimensionality,
        pChunkIndices,
        _out_ref,
    )
    check_error(_result)
    return _out_ref[]
end

"""
    zarrs_array_retrieve_chunk(array, dimensionality, pChunkIndices, chunkBytesCount, pChunkBytes)

### Prototype
```c
ZarrsResult zarrsArrayRetrieveChunk(ArrayHandle *array, uintptr_t dimensionality, const uint64_t *pChunkIndices, uintptr_t chunkBytesCount, uint8_t *pChunkBytes);
```
"""
function zarrs_array_retrieve_chunk(
    array,
    dimensionality,
    pChunkIndices,
    chunkBytesCount,
    pChunkBytes,
)
    _result = ccall(
        (:zarrsArrayRetrieveChunk, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}, Csize_t, Ptr{UInt8}),
        array,
        dimensionality,
        pChunkIndices,
        chunkBytesCount,
        pChunkBytes,
    )
    check_error(_result)
end

"""
    zarrs_array_store_chunk(array, dimensionality, pChunkIndices, chunkBytesCount, pChunkBytes)

### Prototype
```c
ZarrsResult zarrsArrayStoreChunk(ArrayHandle *array, uintptr_t dimensionality, const uint64_t *pChunkIndices, uintptr_t chunkBytesCount, const uint8_t *pChunkBytes);
```
"""
function zarrs_array_store_chunk(
    array,
    dimensionality,
    pChunkIndices,
    chunkBytesCount,
    pChunkBytes,
)
    _result = ccall(
        (:zarrsArrayStoreChunk, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}, Csize_t, Ptr{UInt8}),
        array,
        dimensionality,
        pChunkIndices,
        chunkBytesCount,
        pChunkBytes,
    )
    check_error(_result)
end

"""
    zarrs_array_get_chunk_origin(array, dimensionality, pChunkIndices, pChunkOrigin)

### Prototype
```c
ZarrsResult zarrsArrayGetChunkOrigin(ArrayHandle *array, uintptr_t dimensionality, const uint64_t *pChunkIndices, uint64_t *pChunkOrigin);
```
"""
function zarrs_array_get_chunk_origin(array, dimensionality, pChunkIndices, pChunkOrigin)
    _result = ccall(
        (:zarrsArrayGetChunkOrigin, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}, Ptr{UInt64}),
        array,
        dimensionality,
        pChunkIndices,
        pChunkOrigin,
    )
    check_error(_result)
end

"""
    zarrs_array_get_chunk_shape(array, dimensionality, pChunkIndices, pChunkShape)

### Prototype
```c
ZarrsResult zarrsArrayGetChunkShape(ArrayHandle *array, uintptr_t dimensionality, const uint64_t *pChunkIndices, uint64_t *pChunkShape);
```
"""
function zarrs_array_get_chunk_shape(array, dimensionality, pChunkIndices, pChunkShape)
    _result = ccall(
        (:zarrsArrayGetChunkShape, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}, Ptr{UInt64}),
        array,
        dimensionality,
        pChunkIndices,
        pChunkShape,
    )
    check_error(_result)
end

"""
    zarrs_array_get_sub_chunk_shape(array, dimensionality, pIsSharded, pSubChunkShape)

### Prototype
```c
ZarrsResult zarrsArrayGetSubChunkShape(ArrayHandle *array, uintptr_t dimensionality, int32_t *pIsSharded, uint64_t *pSubChunkShape);
```
"""
function zarrs_array_get_sub_chunk_shape(array, dimensionality, pIsSharded, pSubChunkShape)
    _result = ccall(
        (:zarrsArrayGetSubChunkShape, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{Int32}, Ptr{UInt64}),
        array,
        dimensionality,
        pIsSharded,
        pSubChunkShape,
    )
    check_error(_result)
end

"""
    zarrs_create_group_rw(storage, path, metadata_json)

### Prototype
```c
ZarrsResult zarrsCreateGroupRW(StorageHandle *storage, const char *path, const char *metadata_json, GroupHandle **pGroup);
```
"""
function zarrs_create_group_rw(storage, path, metadata_json)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsCreateGroupRW, libzarrs_jl),
        ZarrsResult,
        (Ptr{StorageHandle}, Cstring, Cstring, Ptr{Ptr{GroupHandle}}),
        storage,
        path,
        metadata_json,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_open_group_rw(storage, path)

### Prototype
```c
ZarrsResult zarrsOpenGroupRW(StorageHandle *storage, const char *path, GroupHandle **pGroup);
```
"""
function zarrs_open_group_rw(storage, path)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsOpenGroupRW, libzarrs_jl),
        ZarrsResult,
        (Ptr{StorageHandle}, Cstring, Ptr{Ptr{GroupHandle}}),
        storage,
        path,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_destroy_group(group)

### Prototype
```c
ZarrsResult zarrsDestroyGroup(GroupHandle *group);
```
"""
function zarrs_destroy_group(group)
    _result =
        ccall((:zarrsDestroyGroup, libzarrs_jl), ZarrsResult, (Ptr{GroupHandle},), group)
    check_error(_result)
end

"""
    zarrs_group_get_attributes(group, pretty)

### Prototype
```c
ZarrsResult zarrsGroupGetAttributes(GroupHandle *group, int32_t pretty, char **pAttributes);
```
"""
function zarrs_group_get_attributes(group, pretty)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsGroupGetAttributes, libzarrs_jl),
        ZarrsResult,
        (Ptr{GroupHandle}, Int32, Ptr{Cstring}),
        group,
        pretty,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_group_set_attributes(group, attributes)

### Prototype
```c
ZarrsResult zarrsGroupSetAttributes(GroupHandle *group, const char *attributes);
```
"""
function zarrs_group_set_attributes(group, attributes)
    _result = ccall(
        (:zarrsGroupSetAttributes, libzarrs_jl),
        ZarrsResult,
        (Ptr{GroupHandle}, Cstring),
        group,
        attributes,
    )
    check_error(_result)
end

"""
    zarrs_group_store_metadata(group)

### Prototype
```c
ZarrsResult zarrsGroupStoreMetadata(GroupHandle *group);
```
"""
function zarrs_group_store_metadata(group)
    _result = ccall(
        (:zarrsGroupStoreMetadata, libzarrs_jl),
        ZarrsResult,
        (Ptr{GroupHandle},),
        group,
    )
    check_error(_result)
end

"""
    zarrs_jl_array_resize(storage, path, ndim, new_shape)

Resize an array.

### Prototype
```c
ZarrsResult zarrsJlArrayResize(StorageHandle *storage, const char *path, uintptr_t ndim, const uint64_t *new_shape);
```
"""
function zarrs_jl_array_resize(storage, path, ndim, new_shape)
    _result = ccall(
        (:zarrsJlArrayResize, libzarrs_jl),
        ZarrsResult,
        (Ptr{StorageHandle}, Cstring, Csize_t, Ptr{UInt64}),
        storage,
        path,
        ndim,
        new_shape,
    )
    check_error(_result)
end

"""
    zarrs_jl_storage_list_dir(storage, path)

List directory children, returning a JSON array of strings.

### Prototype
```c
ZarrsResult zarrsJlStorageListDir(StorageHandle *storage, const char *path, char **json_out);
```
"""
function zarrs_jl_storage_list_dir(storage, path)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsJlStorageListDir, libzarrs_jl),
        ZarrsResult,
        (Ptr{StorageHandle}, Cstring, Ptr{Cstring}),
        storage,
        path,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_jl_storage_get(storage, key)

Read a single key from storage, returning its bytes as a C string. Returns ZARRS\\_SUCCESS with null output if the key is not found.

### Prototype
```c
ZarrsResult zarrsJlStorageGet(StorageHandle *storage, const char *key, char **data_out);
```
"""
function zarrs_jl_storage_get(storage, key)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsJlStorageGet, libzarrs_jl),
        ZarrsResult,
        (Ptr{StorageHandle}, Cstring, Ptr{Cstring}),
        storage,
        key,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_jl_array_erase_chunk(storage, path, ndim, indices)

Erase a specific chunk from an array.

### Prototype
```c
ZarrsResult zarrsJlArrayEraseChunk(StorageHandle *storage, const char *path, uintptr_t ndim, const uint64_t *indices);
```
"""
function zarrs_jl_array_erase_chunk(storage, path, ndim, indices)
    _result = ccall(
        (:zarrsJlArrayEraseChunk, libzarrs_jl),
        ZarrsResult,
        (Ptr{StorageHandle}, Cstring, Csize_t, Ptr{UInt64}),
        storage,
        path,
        ndim,
        indices,
    )
    check_error(_result)
end

"""
    zarrs_icechunk_s3_storage(bucket, prefix, region, anonymous, endpoint_url, allow_http, access_key_id, secret_access_key, session_token)
